tests/machine/x/ocaml/json_builtin.ml
let m = [("a",Obj.repr (1));("b",Obj.repr (2))]

let () =
  json m;
